# cabal-unused-packages-mixin-repro

./: README.md  cabal-unused-packages-mixin-repro.cabal
src/: Example.hs
