cabal-version: 3.0
name:          cabal-unused-packages-mixin-repro
version:       0.1.0.0

library
  build-depends:
    , relude  ==1.2.1.0

  mixins:
    relude (Relude as Prelude),
    relude

  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  ghc-options:        -Wunused-packages -Werror
  hs-source-dirs:     src
  exposed-modules:    Example
